--- a/index.html
+++ b/index.html
@@ -186,15 +186,12 @@
               <div class="skills__skill">HTML</div>
               <div class="skills__skill">CSS</div>
               <div class="skills__skill">JavaScript</div>
-              <div class="skills__skill">React</div>
-              <div class="skills__skill">SASS</div>
-              <div class="skills__skill">GIT</div>
+              <div class="skills__skill">Python</div>
+              <div class="skills__skill">Flask</div>
+              <div class="skills__skill">API Dev</div>
+              <div class="skills__skill">SQL</div>
               <div class="skills__skill">Shopify</div>
-              <div class="skills__skill">Wordpress</div>
-              <div class="skills__skill">Google ADS</div>
-              <div class="skills__skill">Facebook Ads</div>
-              <div class="skills__skill">Android</div>
-              <div class="skills__skill">IOS</div>
+              <div class="skills__skill">Webhooks</div>
             </div>
           </div>
         </div>
