--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="header__logo-container">
           <div class="header__logo-img-cont">
             <img
-              src="./assets/png/john-doe.png"
+              src="https://avatars.githubusercontent.com/u/18570300?v=4"
               alt="Ram Maheshwari Logo Image"
               class="header__logo-img"
             />
