--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
               />
             </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Project 1</h3>
+              <h3 class="projects__row-content-title">WiP - Digitization of Lunch Systems through RFID</h3>
               <p class="projects__row-content-desc">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
                 facilis tempora, explicabo quae quod deserunt eius sapiente
