--- a/index.html
+++ b/index.html
@@ -217,15 +217,13 @@
             <div class="projects__row-content">
               <h3 class="projects__row-content-title">WiP - Digitization of Lunch Systems through RFID</h3>
               <p class="projects__row-content-desc">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
-                facilis tempora, explicabo quae quod deserunt eius sapiente
-                praesentium.
+                My school uses paper tickets as a way of providing lunch to students. How outdated! With this project, I propose a better, newer, and open-source system to replace this outdated form of technology!
               </p>
               <a
                 href="./project-1.html"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
-                >Case Study</a
+                >View now!</a
               >
             </div>
           </div>
