--- a/index.html
+++ b/index.html
@@ -217,10 +217,10 @@
             <div class="projects__row-content">
               <h3 class="projects__row-content-title">WiP - Digitization of Lunch Systems through RFID</h3>
               <p class="projects__row-content-desc">
-                My school uses paper tickets as a way of providing lunch to students. How outdated! With this project, I propose a better, newer, and open-source system to replace this outdated form of technology!
+                My school uses paper tickets as a way of providing lunch to students. How outdated!<br> With this project, I propose a better, newer, and open-source system to replace this outdated form of technology!
               </p>
               <a
-                href="./project-1.html"
+                href="./lunchsystem.html"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
                 >View now!</a
@@ -381,8 +381,6 @@
             </p>
           </div>
         </div>
-
-        <!-- If you give me some credit or shoutout here by linking to my website, then it will be a big thing for me and will help me a lot :) -->
       </div>
     </footer>
 
