--- a/lunchsystem.html
+++ b/lunchsystem.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Case Study of Project 1</title>
-    <meta name="description" content="Case study page of Project" />
+    <title>Ramzi Hijjawi - Student Portfolio</title>
+    <meta name="description" content="Portfolio Template for Developer" />
 
     <link rel="stylesheet" href="css/style.css" />
 
@@ -22,12 +22,12 @@
         <div class="header__logo-container">
           <div class="header__logo-img-cont">
             <img
-              src="./assets/png/john-doe.png"
+              src="https://avatars.githubusercontent.com/u/18570300?v=4"
               alt="Ram Maheshwari Logo Image"
               class="header__logo-img"
             />
           </div>
-          <span class="header__logo-sub">John Doe</span>
+          <span class="header__logo-sub">Ramzi Hijjawi</span>
         </div>
         <div class="header__main">
           <ul class="header__links">
@@ -87,9 +87,7 @@
         <h1 class="heading-primary">Project 1</h1>
         <div class="project-cs-hero__info">
           <p class="text-primary">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos
-            in numquam incidunt earum quaerat cum fuga, atque similique natus
-            nobis sit.
+            This porject uses a combination of Payment APIs, gateways and databases to manage user authentication and usage of the site.
           </p>
         </div>
         <div class="project-cs-hero__cta">
@@ -111,14 +109,7 @@
             <div class="project-details__desc">
               <h3 class="project-details__content-title">Project Overview</h3>
               <p class="project-details__desc-para">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque
-                alias tenetur minus quaerat aliquid, aut provident blanditiis,
-                deleniti aspernatur ipsam eaque veniam voluptatem corporis vitae
-                mollitia laborum corrupti ullam rem. Lorem ipsum dolor sit amet
-                consectetur adipisicing elit. Neque alias tenetur minus quaerat
-                aliquid, aut provident blanditiis, deleniti aspernatur ipsam
-                eaque veniam voluptatem corporis vitae mollitia laborum corrupti
-                ullam rem?
+                This project aims to eradicate the old ways of paper tickets and manual counting. This can lead to miscalculations, fraud, and theft. With this project, databases and complex scripts make all the human errors nearly impossible thanks to redundancy, per transaction logging and full automation. This system even allows students to "lock" their wallets in-case their IDs are ever misplaced or stolen. It also allows them to send their friends tickets from anywhere with no transaction delays whatsoever. 
               </p>
               <p class="project-details__desc-para">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque
@@ -132,16 +123,10 @@
               <div class="skills">
                 <div class="skills__skill">HTML</div>
                 <div class="skills__skill">CSS</div>
-                <div class="skills__skill">JavaScript</div>
-                <div class="skills__skill">React</div>
-                <div class="skills__skill">SASS</div>
-                <div class="skills__skill">GIT</div>
-                <div class="skills__skill">Shopify</div>
-                <div class="skills__skill">Wordpress</div>
-                <div class="skills__skill">Google ADS</div>
-                <div class="skills__skill">Facebook Ads</div>
-                <div class="skills__skill">Android</div>
-                <div class="skills__skill">IOS</div>
+                <div class="skills__skill">Flask</div>
+                <div class="skills__skill">Python</div>
+                <div class="skills__skill">MySQL</div>
+                <div class="skills__skill">Stripe</div>
               </div>
             </div>
             <div class="project-details__links">
@@ -153,7 +138,7 @@
                 >Live Link</a
               >
               <a
-                href="#"
+                href="https://github.com/rhijjawi/Digital-Lunch-System-RFID"
                 class="btn btn--med btn--theme-inv project-details__links-btn"
                 target="_blank"
                 >Code Link</a
@@ -178,7 +163,7 @@
                   alt="icon"
                 />
               </a>
-              <a target="_blank" rel="noreferrer" href="#">
+              <a target="_blank" rel="noreferrer" href="https://github.com/rhijjawi">
                 <img
                   class="main-footer__icon"
                   src="./assets/png/github-ico.png"
@@ -209,22 +194,15 @@
             </div>
           </div>
           <div class="main-footer__row main-footer__row-2">
-            <h4 class="heading heading-sm text-lt">John Doe</h4>
+            <h4 class="heading heading-sm text-lt">Ramzi Hijjawi</h4>
             <p class="main-footer__short-desc">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit facilis
-              tempora explicabo quae quod deserunt
+              Catch me on my socials!
             </p>
           </div>
         </div>
-
-        <div class="main-footer__lower">
-          &copy; Copyright 2021. Made by
-          <a rel="noreferrer" target="_blank" href="https://rammaheshwari.com"
-            >Ram Maheshwari</a
-          >
-        </div>
       </div>
     </footer>
+
     <script src="./index.js"></script>
   </body>
 </html>
