--- a/index.html
+++ b/index.html
@@ -261,14 +261,12 @@
               />
             </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Project 3</h3>
+              <h3 class="projects__row-content-title">More Projects</h3>
               <p class="projects__row-content-desc">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
-                facilis tempora, explicabo quae quod deserunt eius sapiente
-                praesentium.
+                You'll find a lot of my porjects and project forks on my GitHub account! I'm very active and enjoy configuring open-source apps.
               </p>
               <a
-                href="./project-3.html"
+                href="https://github.com/rhijjawi"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
                 >Case Study</a
