--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Portfolio Template for Developer" />
 
     <link rel="stylesheet" href="css/style.css" />
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.25.0/axios.min.js" integrity="sha512-/Q6t3CASm04EliI1QyIDAA/nDo9R8FQ/BULoUFyN4n/BDdyIxeH7u++Z+eobdmr11gG5D/6nPFyDlnisDwhpYA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -230,7 +230,7 @@
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
-                src="./assets/jpeg/project-mockup-example.jpeg"
+                src="https://stanislas.blog/2020/04/nextdns/nextdns.png"
                 alt="Software Screenshot"
                 class="projects__row-img"
                 loading="lazy"
@@ -239,9 +239,7 @@
             <div class="projects__row-content">
               <h3 class="projects__row-content-title">Project 2</h3>
               <p class="projects__row-content-desc">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
-                facilis tempora, explicabo quae quod deserunt eius sapiente
-                praesentium.
+                
               </p>
               <a
                 href="./project-2.html"
@@ -263,7 +261,7 @@
             <div class="projects__row-content">
               <h3 class="projects__row-content-title">More Projects</h3>
               <p class="projects__row-content-desc">
-                You'll find a lot of my porjects and project forks on my GitHub account! I'm very active and enjoy configuring open-source apps.
+                You'll find a lot of my porjects and project forks on my GitHub account! I'm very active and enjoy configuring and contributing to open-source apps.
               </p>
               <a
                 href="https://github.com/rhijjawi"
