--- a/lunchsystem.html
+++ b/lunchsystem.html
@@ -87,7 +87,7 @@
         <h1 class="heading-primary">Project 1</h1>
         <div class="project-cs-hero__info">
           <p class="text-primary">
-            This porject uses a combination of Payment APIs, gateways and databases to manage user authentication and usage of the site.
+            This project uses a combination of Payment APIs, gateways and databases to manage user authentication and usage of the site.
           </p>
         </div>
         <div class="project-cs-hero__cta">
