GDPR Analytics and Typo Correction

--- a/index.html
+++ b/index.html
@@ -163,10 +163,10 @@
               <p class="about__content-details-para">
                 Hey! It's
                 <strong>Ramzi Hijjawi</strong>
-                and I'm a beginner <strong> Frontend and Backend Web Developer </strong> located in
-                East Africa. I've done
+                and I'm a beginner <strong> Frontend and Backend Web Developer </strong> based in
+                East Africa. I'm passionate about learning new programming languages and I've done
                 <strong> remote </strong>
-                projects for users on Fiverr and helped many people with Web Debugging, Python and JS.
+                projects for users on <a style="color:rgb(38, 155, 116)" href="https://fiverr.com/pcbuilderramzi">Fiverr</a> and helped many people with Web Debugging, Python and JS.
               </p>
               <p class="about__content-details-para">
                 I'm a bit of a digital product junky. Over the years, I've used
@@ -396,6 +396,8 @@
             <p class="main-footer__short-desc">
               Catch me on my socials!
             </p>
+            <br>
+            <a href="https://www.digitalocean.com/?refcode=374a20d5d9a5&utm_campaign=Referral_Invite&utm_medium=Referral_Program&utm_source=badge"><img src="https://web-platforms.sfo2.cdn.digitaloceanspaces.com/WWW/Badge%201.svg" alt="DigitalOcean Referral Badge" /><span><br>Join me on Digital Ocean and get $100 in free credits!</span></a>
           </div>
         </div>
       </div>
@@ -419,5 +421,6 @@
     } 
     </script>
     <script>NextDNS()</script>
+    <script defer data-domain="ramzihijjawi.me" src="https://plausible.io/js/plausible.js"></script>
   </body>
 </html>
