--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
               />
             </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">WiP - Torrent as a Service (Coming soon!)</h3>
+              <h3 class="projects__row-content-title">WiP - MyCloudTorrent.codes</h3>
               <p class="projects__row-content-desc" name="TaaS">
               </p>
               <a
@@ -253,9 +253,10 @@
             <div class="projects__row-content">
               <h3 class="projects__row-content-title">WiP - Managebac Python Wrapper</h3>
               <p class="projects__row-content-desc" name="Managebac">
+              Cloud torrenting PaaS that uses a budget friendly subscription model to serve torrents to strict ISPs and circumvent their blocks.
               </p>
               <a
-                href="https://github.com/rhijjawi"
+                href="./torrent.html"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
                 >View Now!</a
