--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700;900&display=swap"
       rel="stylesheet"
     />
+    <script src="https://cdn.jsdelivr.net/gh/rhijjawi/Dopefolio@master/assets/js/randombg.js"></script>
     <script defer data-domain="ramzihijjawi.me" src="https://plausible.io/js/plausible.js"></script>
   </head>
   <body>
