--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <div class="header__logo-img-cont">
             <img
               src="https://avatars.githubusercontent.com/u/18570300?v=4"
-              alt="Ram Maheshwari Logo Image"
+              alt="Ramzi Hijjawi Logo Image"
               class="header__logo-img"
             />
           </div>
