--- a/index.html
+++ b/index.html
@@ -94,6 +94,10 @@
         </div>
         <div class="home-hero__cta">
           <a href="./#projects" class="btn btn--bg">Projects</a>
+          <br>
+          <div>
+            <span class="text-primary">Total Github Contributions: </span><span id="total_contribs" class="text-primary"></span>
+          </div>
         </div>
       </div>
       <div class="home-hero__socials">
