--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
     <script>
       async function getContributions(username) {
         const headers = {
-          'Authorization': `bearer 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`,
+          'Authorization': `bearer {{gh_key}}`,
         }
         const body = {
             "query": `query {
