--- a/index.html
+++ b/index.html
@@ -457,12 +457,12 @@
         const data = await response.json()
         return data
 }
-      }
-
-  const data = await getContributions('rhijjawi')
-  document.getElementById('total_contribs').innerHTML = data.data.user.contributionsCollection.contributionCalendar.totalContributions
     </script>
     <script>NextDNS()</script>
+    <script>
+      const data = await getContributions('rhijjawi')
+      document.getElementById('total_contribs').innerHTML = data.data.user.contributionsCollection.contributionCalendar.totalContributions
+    </script>
     
   </body>
 </html>
