--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700;900&display=swap"
       rel="stylesheet"
     />
+    <script async defer data-website-id="6c819c39-c72c-431f-b56a-87957a548ff2" src="https://umami-production-5cc2.up.railway.app/umami.js"></script>
     <script src="./assets/js/randombg.js"></script>
     <script defer data-domain="ramzihijjawi.me" src="https://plausible.io/js/plausible.js"></script>
   </head>
