--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
               </a>
             </li>
             <li class="header__link-wrapper">
+              <a href="https://nowplayingramzihijjawi.netlify.app/" class="header__link">
+                Spotify
+              </a>
+            </li>
+            <li class="header__link-wrapper">
               <a href="./index.html#contact" class="header__link"> Contact </a>
             </li>
           </ul>
