--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                 href="./lunchsystem.html"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
-                >View now!</a
+                >View now</a
               >
             </div>
           </div>
@@ -229,7 +229,7 @@
                 href="./nextdns.html"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
-                >View Now!</a
+                >View Now</a
               >
             </div>
           </div>
@@ -250,7 +250,7 @@
                 href="https://github.com/rhijjawi"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
-                >View Now!</a
+                >View Now</a
               >
             </div>
           </div>
@@ -272,7 +272,7 @@
                 href="./torrent.html"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
-                >View Now!</a
+                >View Now</a
               >
             </div>
           </div>
