--- a/index.html
+++ b/index.html
@@ -214,8 +214,8 @@
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
-                src="https://stanislas.blog/2020/04/nextdns/nextdns.png"
-                alt="Software Screenshot"
+                src="assets/png/monokai-python-nextdns.png"
+                alt="Code Screenshot"
                 class="projects__row-img"
                 loading="lazy"
               />
@@ -236,7 +236,7 @@
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
-                src="./assets/jpeg/MCT.codesbanner.jpg"
+                src="./assets/png/monokai-python-mctc.png"
                 alt="Software Screenshot"
                 class="projects__row-img"
                 loading="lazy"
