--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Ramzi Hijjawi - Student Portfolio</title>
-    <meta name="description" content="Python Programmer & JS Web Dev - 🌍" />
+    <meta name="description" content="Python/Go/Node Programmer & JS Web Dev - 🌍" />
 
     <link rel="stylesheet" href="css/style.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.25.0/axios.min.js" integrity="sha512-/Q6t3CASm04EliI1QyIDAA/nDo9R8FQ/BULoUFyN4n/BDdyIxeH7u++Z+eobdmr11gG5D/6nPFyDlnisDwhpYA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -363,7 +363,7 @@
               <a target="_blank" rel="noreferrer" href="#">
                 <img
                   class="main-footer__icon"
-                  src="./assets/png/linkedin-ico.png"
+                  src="https://discord.com/assets/2d20a45d79110dc5bf947137e9d99b66.svg"
                   alt="icon"
                 />
               </a>
