--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
               <a target="_blank" rel="noreferrer" href="#">
                 <img
                   class="main-footer__icon"
-                  src="https://discord.com/assets/2d20a45d79110dc5bf947137e9d99b66.svg"
+                  src="./assets/png/discord-ico.png"
                   alt="icon"
                 />
               </a>
