--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
               <a target="_blank" rel="noreferrer" href="#">
                 <img
                   class="main-footer__icon"
-                  src="./assets/png/discord-ico.png"
+                  src="./assets/png/discord-ico.svg"
                   alt="icon"
                 />
               </a>
