--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
               <p class="about__content-details-para">
                 I'm a bit of a digital product junky. Over the years, I've used
                 hundreds of web and mobile apps in almost ever digital industry imaginable. 
-                Feel free to <strong>contact</strong> me here.
+                Feel free to contact me using the button below.
               </p>
             </div>
             <a href="./#contact" class="btn btn--med btn--theme dynamicBgClr"
@@ -245,6 +245,7 @@
             <div class="projects__row-content">
               <h3 class="projects__row-content-title">WiP - MyCloudTorrent.codes</h3>
               <p class="projects__row-content-desc" name="TaaS">
+                A seeder that downloads magnet torrents quickly through the cloud, then allows file to be streamed from Apache server.
               </p>
               <a
                 href="https://github.com/rhijjawi"
@@ -288,13 +289,13 @@
             <div class="projects__row-content">
               <h3 class="projects__row-content-title">More Projects</h3>
               <p class="projects__row-content-desc">
-                You'll find a lot of my projects and project forks on my GitHub account! I'm very active and enjoy configuring and contributing to open-source apps.
+                You'll find a lot of my projects and project forks on my GitHub account! I'm very active and enjoy writing, configuring and contributing to open-source apps.
               </p>
               <a
                 href="https://github.com/rhijjawi"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
-                >Case Study</a
+                >View More</a
               >
             </div>
           </div>
