--- a/nextdns.html
+++ b/nextdns.html
@@ -133,13 +133,13 @@
                 href="https://pypi.org/project/nextdnsapi/"
                 class="btn btn--med btn--theme project-details__links-btn"
                 target="_blank"
-                >Live Link</a
+                >Pypi</a
               >
               <a
                 href="https://github.com/rhijjawi/NextDNS-API"
                 class="btn btn--med btn--theme-inv project-details__links-btn"
                 target="_blank"
-                >Code Link</a
+                >GitHub Repo</a
               >
             </div>
           </div>
