--- a/nextdns.html
+++ b/nextdns.html
@@ -202,5 +202,7 @@
     </footer>
 
     <script src="./index.js"></script>
+    <script async defer src="https://sa.ramzihijjawi.me/latest.js"></script>
+    <noscript><img src="https://sa.ramzihijjawi.me/noscript.gif" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
   </body>
 </html>
