--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
     <script>
       getContributions('rhijjawi')
     </script>
-    <script async defer src="https://sa.ramzihijjawi.me/latest.js"></script>
-    <noscript><img src="https://sa.ramzihijjawi.me/noscript.gif" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
+    <script data-collect-dnt="true" async defer src="https://sa.ramzihijjawi.me/latest.js"></script>
+    <noscript><img data-collect-dnt="true" src="https://sa.ramzihijjawi.me/noscript.gif" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
   </body>
 </html>
