--- a/lunchsystem.html
+++ b/lunchsystem.html
@@ -200,7 +200,7 @@
     </footer>
 
     <script src="./index.js"></script>
-    <script async defer src="https://sa.ramzihijjawi.me/latest.js"></script>
-    <noscript><img src="https://sa.ramzihijjawi.me/noscript.gif" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
+    <script async defer data-collect-dnt="true" src="https://sa.ramzihijjawi.me/latest.js"></script>
+    <noscript><img data-collect-dnt="true" src="https://sa.ramzihijjawi.me/noscript.gif" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
   </body>
 </html>
