--- a/index.html
+++ b/index.html
@@ -192,6 +192,28 @@
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
+                src="https://syncify.tech/cover-picture.jpg"
+                alt="Software Screenshot"
+                class="projects__row-img"
+                loading="lazy"
+              />
+            </div>
+            <div class="projects__row-content">
+              <h3 class="projects__row-content-title">Syncify.tech - Spotify Syncronization</h3>
+              <p class="projects__row-content-desc">
+                <a href="https://syncify.tech">Syncify.tech</a> is a room-based syncronization webapp that allows "hosts" to control what others are listening to. Perfect for livestreams and long-distance vibe sessions!
+              </p>
+              <a
+                href="https://syncify.tech/"
+                class="btn btn--med btn--theme dynamicBgClr"
+                target="_blank"
+                >Check it out!</a
+              >
+            </div>
+          </div>
+          <div class="projects__row">
+            <div class="projects__row-img-cont">
+              <img
                 src="./assets/jpeg/mainpage1.jpg"
                 alt="Software Screenshot"
                 class="projects__row-img"
