--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
               <p class="about__content-details-para">
                 Hey! It's
                 <strong>Ramzi Hijjawi</strong>
-                and I'm a beginner <strong> Frontend and Backend Web Developer </strong> based in
+                and I'm a beginner <strong> Frontend and Backend Web Developer </strong> living in
                 East Africa. I'm passionate about learning new programming languages and I've done
                 <strong> remote </strong>
                 projects for users on <a style="color:rgb(38, 155, 116)" href="https://fiverr.com/pcbuilderramzi">Fiverr</a> and helped many people with Web Debugging, Python and JS.
@@ -191,7 +191,7 @@
         <div class="projects__content">
           <div class="projects__row">
             <div class="projects__row-img-cont">
-              <img
+              <img style="transform: scale(2); transform: translate(0, 10px);"
                 src="https://syncify.tech/cover-picture.jpg"
                 alt="Software Screenshot"
                 class="projects__row-img"
