--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         <div class="projects__content">
           <div class="projects__row">
             <div class="projects__row-img-cont">
-              <img style="transform: scale(2); transform: translate(0, 10px);"
+              <img style="scale: 2; transform: translate(0, 10px);"
                 src="https://syncify.tech/cover-picture.jpg"
                 alt="Software Screenshot"
                 class="projects__row-img"
@@ -427,7 +427,8 @@
             </p>
             <br>
             <a href="https://www.digitalocean.com/?refcode=374a20d5d9a5&utm_campaign=Referral_Invite&utm_medium=Referral_Program&utm_source=badge"><img src="https://web-platforms.sfo2.cdn.digitaloceanspaces.com/WWW/Badge%201.svg" alt="DigitalOcean Referral Badge" /><span><br>Join me on Digital Ocean and get $100 in free credits!</span></a>
-          </div>
+            <a href="https://simpleanalytics.com/?utm_source=ramzihijjawi.me&utm_content=badge" referrerpolicy="origin" target="_blank"><img src="https://simpleanalyticsbadges.com/ramzihijjawi.me?mode=dark&radius=10" loading="lazy" referrerpolicy="no-referrer" crossorigin="anonymous" /></a>
+            </div>
         </div>
       </div>
     </footer>
