--- a/index.html
+++ b/index.html
@@ -421,13 +421,12 @@
             </div>
           </div>
           <div class="main-footer__row main-footer__row-2">
-            <h4 class="heading heading-sm text-lt">Ramzi Hijjawi</h4>
+            <h4 class="heading heading-sm text-lt">Ramzi Hijjawi</h4><br><a href="https://simpleanalytics.com/?utm_source=ramzihijjawi.me&amp;utm_content=badge" referrerpolicy="origin" target="_blank"><img src="https://simpleanalyticsbadges.com/ramzihijjawi.me?mode=dark&amp;radius=10" loading="lazy" referrerpolicy="no-referrer" crossorigin="anonymous"></a><br>
             <p class="main-footer__short-desc">
               Catch me on my socials!
             </p>
             <br>
             <a href="https://www.digitalocean.com/?refcode=374a20d5d9a5&utm_campaign=Referral_Invite&utm_medium=Referral_Program&utm_source=badge"><img src="https://web-platforms.sfo2.cdn.digitaloceanspaces.com/WWW/Badge%201.svg" alt="DigitalOcean Referral Badge" /><span><br>Join me on Digital Ocean and get $100 in free credits!</span></a>
-            <a href="https://simpleanalytics.com/?utm_source=ramzihijjawi.me&utm_content=badge" referrerpolicy="origin" target="_blank"><img src="https://simpleanalyticsbadges.com/ramzihijjawi.me?mode=dark&radius=10" loading="lazy" referrerpolicy="no-referrer" crossorigin="anonymous" /></a>
             </div>
         </div>
       </div>
