--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
         <div class="mouse"></div>
       </div>
     </section>
-    <section id="freelancing" class="projects sec-pad">
+    <section class="projects sec-pad">
       <div class="main-container">
-        <h2 class="heading heading-sec heading-sec__mb-bg">
+        <h2 id="freelancing" class="heading heading-sec heading-sec__mb-bg">
           <span class="heading-sec__main">Looking to work with me?</span>
           <span class="heading-sec__sub">
             I'm open to working for all sorts of projects! Not sure what you need? Contact me and I'll be more than happy to provide quotes, timeframes, and information.
