--- a/index.html
+++ b/index.html
@@ -463,9 +463,9 @@
             </div>
         </div>
       </div>
-    <div id="voipstripe" class="popup">
+    <div><div id="voipstripe" class="popup">
       <stripe-pricing-table pricing-table-id="prctbl_1MWPyxLcC6CnftayH7zWsXGw" publishable-key="pk_live_51L31eNLcC6Cnftayecvm7TL8aiF00lKZmB6SYCSstYQ22r0vBGn7aZrYgcNtYKvIrt0lGnH29H0lZDFvpilePHSH0067qcbjss"></stripe-pricing-table>
-    </div>
+    </div></div>
     <div id="webhookstripe" class="popup">
     <stripe-pricing-table pricing-table-id="prctbl_1MWdbtLcC6Cnftay19woctEN" publishable-key="pk_live_51L31eNLcC6Cnftayecvm7TL8aiF00lKZmB6SYCSstYQ22r0vBGn7aZrYgcNtYKvIrt0lGnH29H0lZDFvpilePHSH0067qcbjss"></stripe-pricing-table>
     </div>
