--- a/index.html
+++ b/index.html
@@ -444,13 +444,7 @@
                   alt="icon"
                 />
               </a>
-              <a target="_blank" rel="noreferrer" href="#">
-                <img
-                  class="main-footer__icon main-footer__icon--mr-none"
-                  src="./assets/png/insta-ico.png"
-                  alt="icon"
-                />
-              </a>
+              <a target="_blank" rel="noreferrer" href="#"><img class="main-footer__icon main-footer__icon--mr-none" src="./assets/png/insta-ico.png" alt="icon"/></a>
             </div>
           </div>
           <div class="main-footer__row main-footer__row-2">
@@ -463,12 +457,8 @@
             </div>
         </div>
       </div>
-    <div><div id="voipstripe" class="popup">
-      <stripe-pricing-table pricing-table-id="prctbl_1MWPyxLcC6CnftayH7zWsXGw" publishable-key="pk_live_51L31eNLcC6Cnftayecvm7TL8aiF00lKZmB6SYCSstYQ22r0vBGn7aZrYgcNtYKvIrt0lGnH29H0lZDFvpilePHSH0067qcbjss"></stripe-pricing-table>
-    </div></div>
-    <div id="webhookstripe" class="popup">
-    <stripe-pricing-table pricing-table-id="prctbl_1MWdbtLcC6Cnftay19woctEN" publishable-key="pk_live_51L31eNLcC6Cnftayecvm7TL8aiF00lKZmB6SYCSstYQ22r0vBGn7aZrYgcNtYKvIrt0lGnH29H0lZDFvpilePHSH0067qcbjss"></stripe-pricing-table>
-    </div>
+    <div class="popupcontainer"><div id="voipstripe" class="popup"><stripe-pricing-table pricing-table-id="prctbl_1MWPyxLcC6CnftayH7zWsXGw" publishable-key="pk_live_51L31eNLcC6Cnftayecvm7TL8aiF00lKZmB6SYCSstYQ22r0vBGn7aZrYgcNtYKvIrt0lGnH29H0lZDFvpilePHSH0067qcbjss"></stripe-pricing-table></div></div>
+    <div class="popupcontainer"><div id="webhookstripe" class="popup"><stripe-pricing-table pricing-table-id="prctbl_1MWdbtLcC6Cnftay19woctEN" publishable-key="pk_live_51L31eNLcC6Cnftayecvm7TL8aiF00lKZmB6SYCSstYQ22r0vBGn7aZrYgcNtYKvIrt0lGnH29H0lZDFvpilePHSH0067qcbjss"></stripe-pricing-table></div></div>
     </footer>
 
     <script src="./index.js"></script>
@@ -539,7 +529,7 @@
         }}
     });
     </script>
-    <script data-collect-dnt="true" async defer src="https://sa.ramzihijjawi.me/latest.js"></script>
-    <noscript><img data-collect-dnt="true" src="https://sa.ramzihijjawi.me/noscript.gif" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
+    <script data-collect-dnt="false" async defer src="https://sa.ramzihijjawi.me/latest.js"></script>
+    <noscript><img data-collect-dnt="false" src="https://sa.ramzihijjawi.me/noscript.gif" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
   </body>
 </html>
