--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
               Catch me on my socials!
             </p>
             <br>
-            <a href="https://www.digitalocean.com/?refcode=374a20d5d9a5&utm_campaign=Referral_Invite&utm_medium=Referral_Program&utm_source=badge"><img src="https://web-platforms.sfo2.cdn.digitaloceanspaces.com/WWW/Badge%201.svg" alt="DigitalOcean Referral Badge" /><span><br>Join me on Digital Ocean and get $100 in free credits!</span></a>
+            <a href="https://www.digitalocean.com/?refcode=374a20d5d9a5&utm_campaign=Referral_Invite&utm_medium=Referral_Program&utm_source=badge"><img src="https://web-platforms.sfo2.digitaloceanspaces.com/WWW/Badge%203.svg" alt="DigitalOcean Referral Badge"/><span><br>Join me on Digital Ocean and get $100 in free credits!</span></a>
             </div>
         </div>
       </div>
